NoSQL/SCRIPT MONGO 2804.txt
SCRIPT MONGO 28/04

* Para ver si existen bases de datos: 
show dbs 

* Crear y habilitar base de datos: 
use NombreBaseDatos

* Crear colecciones: 
db.createCollection("NombreColeccion")

{ ok: 1 }: Valor exitoso

* Agregar un documento: 
db.Productos.insertOne({nombre:"Laptop", precio:22000, cantidad:10})

Al ser una base no relacional los documentos son registros 
json: objetos {propiedad: valor}

Varios documentos: Listas de json

* Ver documentos creados: 
find (es un metodo) 


COMANDOS PARA OPERADORES (Taller)
- Consulta para un producto que tenga un valor especifico: db.Productos.find({precio:{$gt:10}})

TAREA: Crear una colección clientes y ventas (mínimo 5 documentos en cada una SOLO CONSULTA Y USAR TODOS LOS OPERADORES)


Código hoy: 
show dbs
admin   40.00 KiB
config  60.00 KiB
local   80.00 KiB
use tienda
switched to db tienda
db
tienda
show dbs
admin    40.00 KiB
config  108.00 KiB
local    80.00 KiB
db.createCollection("productos")
{ ok: 1 }
show collections
productos
db.productos.insertOne({nombre:"Laptop",precio:1200000,cantidad:10})
{
  acknowledged: true,
  insertedId: ObjectId('680fce800fba5797aa1a127c')
}
db.productos.insertMany([{nombre:"Mouse",precio:60000,cantidad:15},{nombre:"Teclados",precio:100000,cantidad:15},{nombre:"USB",precio:20000,cantidad:5}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('680fcfe00fba5797aa1a127d'),
    '1': ObjectId('680fcfe00fba5797aa1a127e'),
    '2': ObjectId('680fcfe00fba5797aa1a127f')
  }
}
db.productos.find()
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find().pretty()
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find({precio:{$gt:20000}})
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
db.productos.find({precio:{20000}})
SyntaxError: Unexpected token (1:32)

[0m[31m[1m>[22m[39m[90m 1 |[39m db[33m.[39mproductos[33m.[39mfind({precio[33m:[39m{[35m20000[39m}})
 [90m   |[39m                                 [31m[1m^[22m[39m[0m
db.productos.find({precio:20000})
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find({$or:[{nombre:"Mouse"},{precio:20000}]})
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
tienda

show dbs
admin   40.00 KiB
config  60.00 KiB
local   80.00 KiB
use tienda
switched to db tienda
db
tienda
show dbs
admin    40.00 KiB
config  108.00 KiB
local    80.00 KiB
db.createCollection("productos")
{ ok: 1 }
show collections
productos
db.productos.insertOne({nombre:"Laptop",precio:1200000,cantidad:10})
{
  acknowledged: true,
  insertedId: ObjectId('680fce800fba5797aa1a127c')
}
db.productos.insertMany([{nombre:"Mouse",precio:60000,cantidad:15},{nombre:"Teclados",precio:100000,cantidad:15},{nombre:"USB",precio:20000,cantidad:5}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('680fcfe00fba5797aa1a127d'),
    '1': ObjectId('680fcfe00fba5797aa1a127e'),
    '2': ObjectId('680fcfe00fba5797aa1a127f')
  }
}
db.productos.find()
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find().pretty()
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find({precio:{$gt:20000}})
{
  _id: ObjectId('680fce800fba5797aa1a127c'),
  nombre: 'Laptop',
  precio: 1200000,
  cantidad: 10
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127e'),
  nombre: 'Teclados',
  precio: 100000,
  cantidad: 15
}
db.productos.find({precio:{20000}})
SyntaxError: Unexpected token (1:32)

[0m[31m[1m>[22m[39m[90m 1 |[39m db[33m.[39mproductos[33m.[39mfind({precio[33m:[39m{[35m20000[39m}})
 [90m   |[39m                                 [31m[1m^[22m[39m[0m
db.productos.find({precio:20000})
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
db.productos.find({$or:[{nombre:"Mouse"},{precio:20000}]})
{
  _id: ObjectId('680fcfe00fba5797aa1a127d'),
  nombre: 'Mouse',
  precio: 60000,
  cantidad: 15
}
{
  _id: ObjectId('680fcfe00fba5797aa1a127f'),
  nombre: 'USB',
  precio: 20000,
  cantidad: 5
}
tienda
